kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app

---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra

---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
