kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: laravel-allow-all
  namespace: app

spec:
  podSelector:
    matchLabels:
      app: laravel

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - {}   # allow semua ingress

  egress:
  - {}   # allow semua egress
